[package]
name = "filecoin-proofs-api"
version = "4.0.3-alpha.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
serde = "1.0.104"
paired = "0.20.0"

[dependencies.filecoin-proofs-v1]
version = "4.0.3"
package = "filecoin-proofs"
# git="https://github.com/szdengbw/filecoin-proofs.git"
path="/home/filecoin/gopath/src/github.com/filecoin-project/rust-fil-proofs/filecoin-proofs"
# filecoin-proofs-v1 = { package = "filecoin-proofs", version = "4.0.0" }
# b863301780791cbf529dadf08c713e0a97408833
