[package]
name = "filecoin-proofs-api"
version = "5.2.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"
serde = "1.0.104"
paired = "0.20.0"

[dependencies.filecoin-proofs-v1]
version = "5.1.1"
package = "filecoin-proofs"
# git="https://github.com/szdengbw/filecoin-proofs.git"
path="../rust-fil-proofs/filecoin-proofs"
#filecoin-proofs-v1 = { package = "filecoin-proofs", version = "5.2.0" }
